--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,164 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --bg-color: #282828;
+  --fg-color: #ebdbb2;
+  --primary-color: #b8bb26;
+  --secondary-color: #d3869b;
+  --highlight-color: #fabd2f;
+  --button-bg-color: #458588;
+  --button-hover-bg-color: #689d6a;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: var(--bg-color);
+  color: var(--fg-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.App {
+  width: 700px;
+  text-align: left;
+  padding: 20px;
 }
 
-.card {
-  padding: 2em;
+.App-header {
+  background-color: var(--bg-color);
+  padding: 20px;
+  border: 2px solid var(--primary-color);
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.App-header h1 {
+  color: var(--primary-color);
+  margin-bottom: 20px;
+}
+
+.App-header p {
+  color: var(--secondary-color);
+  margin-bottom: 20px;
+}
+
+.App-button {
+  background-color: var(--button-bg-color);
+  color: var(--fg-color);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.App-button:hover {
+  background-color: var(--button-hover-bg-color);
+}
+
+.about-me, .projects {
+  margin: 20px 0;
+}
+
+.projects ul {
+  list-style: none;
+  padding: 0;
+}
+
+.projects li {
+  margin: 10px 0;
+}
+
+.projects a {
+  color: var(--highlight-color);
+  text-decoration: none;
+}
+
+.projects a:hover {
+  text-decoration: underline;
+}
+
+.about-me h3 {
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 1.2em;
+  color: var(--yellow);
+  text-transform: lowercase;
+}
+
+.tech-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.tech-list li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 20px; /* Indent the list items */
+  margin-bottom: 5px;
+}
+
+.tech-list li::before {
+  content: '•';
+  color: var(--aqua);
+  margin-right: 10px;
+}
+
+/* Additional styles to match the image */
+h2 {
+  text-transform: lowercase;
+  color: var(--yellow);
+}
+
+p {
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+
+h2, h3 {
+  color: var(--primary-color)
+}
+
+textarea {
+  margin-top: 20px;
+  border-radius: 10px;
+  width: 100%;
+  resize: none;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  font-size: 20px;
+  font-family: 'Arial', sans-serif;
+  background-color: var(--bg-color);
+  color: var(--highlight-color)
+}
+
+.send {
+  margin-top: 20px;
+}
+
+.textme {
+  display: flex;
+}
+
+.popup {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+  padding: 10px 20px;
+  border-radius: 4px;
+  border: 2px solid var(--primary-color);
+  opacity: 0;
+  animation: fadeInOut 3s ease;
+}
+
+@keyframes fadeInOut {
+  0%, 100% { opacity: 0; }
+  10%, 90% { opacity: 1; }
 }
