--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -21,6 +21,11 @@
   --button-hover-border: #646cff;
 }
 
+@font-face {
+  font-family: SF;
+  src: url("./assets/SFMonoRegular.otf") format("opentype");
+}
+
 a {
   font-weight: 500;
   color: var(--link-color);
@@ -36,6 +41,7 @@ li {
 }
 
 body {
+  font-family: "SF";
   margin: 0;
   display: flex;
   flex-direction: column;
